[1435251] wicket.util.crypt.AbstractCrypt uses proprietary Sun classes
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk@459457 13f79535-47bb-0310-9956-ffa450edef68